--- a/buildspec.yml
+++ b/buildspec.yml
@@ -1,17 +1,32 @@
 version: 0.2
-
+env:
+  variables:
+    AWS_DEFAULT_REGION: "us-west-2"
 phases:
-  pre_build:
+  install:
     commands:
-      - echo Installing dependencies...
-      - npm install
+      - apt-get -y update
+      - apt-get -y install jq
+  pre_build:
+      commands:
+
+      # load acs submodule (since codebuild doesn't pull the .git folder from the repo
+      - cd common 
+      - git clone https://gituser@gitlab.com/aws-account-tools/acs.git
+      - cd ../
+
+      #install terraform
+      - other/install-tf-linux64.sh
+      - terraform --version
+
+      #set env variables for terraform provider
+      - curl 169.254.170.2$AWS_CONTAINER_CREDENTIALS_RELATIVE_URI | jq 'to_entries | [ .[] | select(.key | (contains("Expiration") or contains("RoleArn"))  | not) ] |  map(if .key == "AccessKeyId" then . + {"key":"AWS_ACCESS_KEY_ID"} else . end) | map(if .key == "SecretAccessKey" then . + {"key":"AWS_SECRET_ACCESS_KEY"} else . end) | map(if .key == "Token" then . + {"key":"AWS_SESSION_TOKEN"} else . end) | map("export \(.key)=\(.value)") | .[]' -r > /tmp/cred.txt # work around https://github.com/hashicorp/terraform/issues/8746
+      - chmod +x /tmp/cred.txt
+      - . /tmp/cred.txt
   build:
     commands:
-      - echo Building files
-      - npm run build
-      - rm -rf node_modules
-artifacts:
-  files:
-    - '**/*'
-  base-directory: '.'
-  discard-paths: no
+      - ls
+      - cd your/repo's/folder/with/main.tf 
+      - terraform init 
+      - terraform plan 
+      - terraform 
